trunk/Archive2/bb/114949c678ccba/output
main.cpp: In instantiation of ‘Variant<types>::Variant(types ...) [with types = {int, float, std::basic_string<char, std::char_traits<char>, std::allocator<char> >}]’:
main.cpp:40:37:   required from ‘Variant<types ...> make_variant(types ...) [with types = {int, float, std::basic_string<char, std::char_traits<char>, std::allocator<char> >}]’
main.cpp:45:88:   required from here
main.cpp:26:9: error: uninitialized member ‘Variant<int, float, std::basic_string<char, std::char_traits<char>, std::allocator<char> > >::active_member’ with ‘const’ type ‘const int’ [-fpermissive]
         Variant(types... args)
         ^
